tests/baselines/reference/contextualTyping33.errors.txt
tests/cases/compiler/contextualTyping33.ts(1,66): error TS2345: Argument of type '((() => 数字) | (() => 文字))[]' is not assignable to parameter of type '{ (): 数字; (i: 数字): 数字; }[]'.
  Type '(() => 数字) | (() => 文字)' is not assignable to type '{ (): 数字; (i: 数字): 数字; }'.
    Type '() => 文字' is not assignable to type '{ (): 数字; (i: 数字): 数字; }'.
      Type '文字' is not assignable to type '数字'.


==== tests/cases/compiler/contextualTyping33.ts (1 errors) ====
    function foo(param: {():number; (i:number):number; }[]) { }; foo([function(){return 1;}, function(){return "foo"}]);
                                                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '((() => 数字) | (() => 文字))[]' is not assignable to parameter of type '{ (): 数字; (i: 数字): 数字; }[]'.
!!! error TS2345:   Type '(() => 数字) | (() => 文字)' is not assignable to type '{ (): 数字; (i: 数字): 数字; }'.
!!! error TS2345:     Type '() => 文字' is not assignable to type '{ (): 数字; (i: 数字): 数字; }'.
!!! error TS2345:       Type '文字' is not assignable to type '数字'.